--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,9 @@ project(AnnotatedTree)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_library(AnnotatedTree )
+include_directories(include)
+link_directories(library)
+
+add_library(AnnotatedTree ChunkType.h SearchType.h Layer/WordLayer.cpp Layer/WordLayer.h Layer/SingleWordLayer.h Layer/MultiWordLayer.h Layer/MultiWordMultiItemLayer.h Layer/SingleWordMultiItemLayer.h Layer/SourceLanguageWordLayer.h Layer/TargetLanguageWordLayer.h)
+
+target_link_libraries(AnnotatedTree AnnotatedSentence Dictionary)
