Updated AnnotatedTree repository translation

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,20 @@ cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Layer/TurkishPropbankLayer.cpp.o
 cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Layer/TurkishSemanticLayer.cpp.o
 cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Layer/TurkishWordLayer.cpp.o
 cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Layer/WordLayer.cpp.o
+cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Processor/Condition/IsProperNoun.cpp.o
+cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Processor/Condition/IsPunctuationNode.cpp.o
+cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Processor/Condition/IsTransferable.cpp.o
+cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Processor/Condition/IsTurkishLeafNode.cpp.o
+cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Processor/Condition/IsVerbNode.cpp.o
+cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Processor/Condition/IsVPNode.cpp.o
+cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Processor/LayerExist/ContainsLayerInformation.cpp.o
+cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Processor/LayerExist/NotContainsLayerInformation.cpp.o
+cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Processor/LayerExist/SemiContainsLayerInformation.cpp.o
+cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Processor/LeafConverter/LeafToEnglish.cpp.o
+cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Processor/LeafConverter/LeafToLanguageConverter.cpp.o
+cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Processor/LeafConverter/LeafToPersian.cpp.o
+cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Processor/LeafConverter/LeafToRootFormConverter.cpp.o
+cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Processor/LeafConverter/LeafToTurkish.cpp.o
+cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Processor/NodeModification/ConvertToLayeredFormat.cpp.o
+cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Processor/NodeModification/DestroyLayers.cpp.o
+cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Processor/NodeModification/ModifyTags.cpp.o
