--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,12 @@ cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Processor/LeafConverter/LeafToTur
 cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Processor/NodeModification/ConvertToLayeredFormat.cpp.o
 cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Processor/NodeModification/DestroyLayers.cpp.o
 cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Processor/NodeModification/ModifyTags.cpp.o
+cmake-build-debug/CMakeFiles/3.15.3/CMakeCCompiler.cmake
+cmake-build-debug/CMakeFiles/3.15.3/CMakeCXXCompiler.cmake
+cmake-build-debug/CMakeFiles/3.15.3/CMakeDetermineCompilerABI_C.bin
+cmake-build-debug/CMakeFiles/3.15.3/CMakeDetermineCompilerABI_CXX.bin
+cmake-build-debug/CMakeFiles/3.15.3/CMakeSystem.cmake
+cmake-build-debug/CMakeFiles/3.15.3/CompilerIdC/a.out
+cmake-build-debug/CMakeFiles/3.15.3/CompilerIdC/CMakeCCompilerId.c
+cmake-build-debug/CMakeFiles/3.15.3/CompilerIdCXX/a.out
+cmake-build-debug/CMakeFiles/3.15.3/CompilerIdCXX/CMakeCXXCompilerId.cpp
