--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,12 @@ cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Processor/Condition/IsNumber.cpp.
 cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Processor/Condition/IsPredicateVerbNode.cpp.o
 /cmake-build-debug/CMakeFiles/Test.dir/
 /cmake-build-debug/Test
+cmake-build-debug/CMakeFiles/3.19.2/CMakeCCompiler.cmake
+cmake-build-debug/CMakeFiles/3.19.2/CMakeCXXCompiler.cmake
+cmake-build-debug/CMakeFiles/3.19.2/CMakeDetermineCompilerABI_C.bin
+cmake-build-debug/CMakeFiles/3.19.2/CMakeDetermineCompilerABI_CXX.bin
+cmake-build-debug/CMakeFiles/3.19.2/CMakeSystem.cmake
+cmake-build-debug/CMakeFiles/3.19.2/CompilerIdC/CMakeCCompilerId.c
+cmake-build-debug/CMakeFiles/3.19.2/CompilerIdC/a.out
+cmake-build-debug/CMakeFiles/3.19.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
+cmake-build-debug/CMakeFiles/3.19.2/CompilerIdCXX/a.out
