--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,16 @@ cmake-build-debug/CMakeFiles/3.19.2/CompilerIdC/CMakeCCompilerId.c
 cmake-build-debug/CMakeFiles/3.19.2/CompilerIdC/a.out
 cmake-build-debug/CMakeFiles/3.19.2/CompilerIdCXX/CMakeCXXCompilerId.cpp
 cmake-build-debug/CMakeFiles/3.19.2/CompilerIdCXX/a.out
+/cmake-build-debug/.cmake/api/v1/reply/
+/cmake-build-debug/CMakeFiles/AnnotatedTree.dir/
+/cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Layer/
+/cmake-build-debug/CMakeFiles/AnnotatedTree.dir/Processor/
+/cmake-build-debug/CMakeFiles/AnnotatedTree.dir/compiler_depend.make
+/cmake-build-debug/CMakeFiles/AnnotatedTree.dir/compiler_depend.ts
+/cmake-build-debug/CMakeFiles/AnnotatedTree.dir/LayerInfo.cpp.o.d
+/cmake-build-debug/CMakeFiles/AnnotatedTree.dir/ParseNodeDrawable.cpp.o.d
+/cmake-build-debug/CMakeFiles/AnnotatedTree.dir/ParseNodeSearchable.cpp.o.d
+/cmake-build-debug/CMakeFiles/AnnotatedTree.dir/ParseTreeDrawable.cpp.o.d
+/cmake-build-debug/CMakeFiles/AnnotatedTree.dir/ParseTreeSearchable.cpp.o.d
+/cmake-build-debug/CMakeFiles/AnnotatedTree.dir/SearchTree.cpp.o.d
+/cmake-build-debug/CMakeFiles/AnnotatedTree.dir/TreeBankDrawable.cpp.o.d
